# Auto-Quant-Analyst

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
sandbox/: Dockerfile
src/agents/: fundamental_analyst.py  intake_agent.py  quant_coder.py  report_compiler.py  risk_validator.py  sentiment_analyst.py  supervisor_agents.py  synthesis_agent.py
src/graph/: conditions.py  graph_builder.py  reducers.py  state.py
src/llm/: nvidia_nim_client.py
src/memory/: redis_cache.py
src/security/: ast_analyzer.py
src/tools/: enhanced_news_fetcher.py  financial_data_tool.py  macro_context_tool.py  sandbox_executor.py  sec_edgar_tool.py  ticker_validator.py  web_search_tool.py
src/utils/: config.py  exceptions.py  logger.py  plotting.py
